# Prod_HayStack_RAG

./: .env.example  .gitignore  AGENTS.md  Gemini_VA_report.md  README.md  pyproject.toml  upgrade_plan.md  va_report.md
src/: config.py  main.py
src/agents/: orchestrator.py  router.py  synthesizer.py
src/agents/workers/: general_agent.py  graph_agent.py  vector_agent.py
src/evaluation/: datasets.py  metrics.py
src/ingestion/: contextual_chunker.py  docling_parser.py  embedder.py  hierarchical_chunker.py  semantic_chunker.py  tables.py  unstructured_parser.py  vision.py
src/memory/: __init__.py  memory_tools.py  summarizer.py  vector_store.py
src/monitoring/: logger.py  metrics.py
src/retrieval/: agent.py  cache.py  fallback.py  session.py
src/retrieval/strategies/: graph_fusion.py  query_expansion.py  query_router.py  reranking.py  self_reflection.py  summary_index.py
src/retrieval/tools/: __init__.py  graph_search_tool.py  vector_tool.py
src/storage/: base.py
src/storage/graph/: __init__.py  neo4j_store.py
src/storage/postgres/: __init__.py  graph_store.py  summary_store.py  vector_store.py
src/utils/: groq_client.py  llm.py
